feat: conclui produtor operacional da migracao integral